--- a/Perchero/Views/Shared/_ModalDetallePrendas.cshtml
+++ b/Perchero/Views/Shared/_ModalDetallePrendas.cshtml
@@ -1,10 +1,10 @@
-﻿<div class="widget-content padding">
-    <label class="col-lg-4">Tela</label>
+﻿<div class="form-group">
+    <label class="col-lg-4">Accesorios</label>
     <label id="tt"></label>
     @*tela*@
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#Tela">
-        Agregar Tela
+        Agregar accesorios
     </button>
     <!-- Modal -->
     <div class="modal fade" id="Tela" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -62,4 +62,4 @@
         </div>
     </div>
 
-    </div>
+</div>
