--- a/Perchero/Views/Pedidoes/Index.cshtml
+++ b/Perchero/Views/Pedidoes/Index.cshtml
@@ -35,7 +35,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Prenda.UserId)
+            @Html.DisplayFor(modelItem => item.Prenda.Usuario.Nombre)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Usuario.Nombre)
