--- a/Perchero/Views/Prendas/Galeria.cshtml
+++ b/Perchero/Views/Prendas/Galeria.cshtml
@@ -30,7 +30,7 @@
 
                                     }
                                     <p class="row">
-                                        <a href="@Url.Action("Pedido", "Pedidos", new {PrendaId = item.Id})" class="btn btn-darkblue-2 btn-block">Seleccionar</a>
+                                        <a href="@Url.Action("Pedido", "Pedidoes", new {PrendaId = item.Id})" class="btn btn-darkblue-2 btn-block">Seleccionar</a>
                                     </p>
                                     <a class="zooming" href="@Url.Content("~/Content/imgprenda/imgori/" + item.Imagen + "/" + item.Imagen + ".png")" title="@item.Nombre">
 
