--- a/Perchero/Views/Shared/_Layout.cshtml
+++ b/Perchero/Views/Shared/_Layout.cshtml
@@ -203,7 +203,7 @@
                 <div class="media leftpanel-profile">
                     <div class="media-left">
                         <a href="#">
-                            <img src="../images/photos/loggeduser.png" alt="" class="media-object img-circle">
+                            <img src="../images/photos/me.png" alt="" class="media-object img-circle">
                         </a>
                     </div>
                     <div class="media-body">
@@ -343,7 +343,7 @@
                             <li class="media">
                                 <a href="#">
                                     <div class="media-left">
-                                        <img class="media-object img-circle" src="../images/photos/user1.png" alt="">
+                                        <img class="media-object img-circle" src="../images/photos/me.png" alt="">
                                     </div>
                                     <div class="media-body">
                                         <h4 class="media-heading">Christina R. Hill</h4>
@@ -354,7 +354,7 @@
                             <li class="media">
                                 <a href="#">
                                     <div class="media-left">
-                                        <img class="media-object img-circle" src="../images/photos/user2.png" alt="">
+                                        <img class="media-object img-circle" src="../images/photos/me.png" alt="">
                                     </div>
                                     <div class="media-body">
                                         <h4 class="media-heading">Floyd M. Romero</h4>
@@ -365,7 +365,7 @@
                             <li class="media">
                                 <a href="#">
                                     <div class="media-left">
-                                        <img class="media-object img-circle" src="../images/photos/user3.png" alt="">
+                                        <img class="media-object img-circle" src="../images/photos/me.png" alt="">
                                     </div>
                                     <div class="media-body">
                                         <h4 class="media-heading">Jennie S. Gray</h4>
@@ -376,7 +376,7 @@
                             <li class="media">
                                 <a href="#">
                                     <div class="media-left">
-                                        <img class="media-object img-circle" src="../images/photos/user4.png" alt="">
+                                        <img class="media-object img-circle" src="../images/photos/me.png" alt="">
                                     </div>
                                     <div class="media-body">
                                         <h4 class="media-heading">Alia J. Locher</h4>
@@ -387,7 +387,7 @@
                             <li class="media">
                                 <a href="#">
                                     <div class="media-left">
-                                        <img class="media-object img-circle" src="../images/photos/user5.png" alt="">
+                                        <img class="media-object img-circle" src="../images/photos/me.png" alt="">
                                     </div>
                                     <div class="media-body">
                                         <h4 class="media-heading">Nicholas T. Hinkle</h4>
@@ -398,7 +398,7 @@
                             <li class="media">
                                 <a href="#">
                                     <div class="media-left">
-                                        <img class="media-object img-circle" src="../images/photos/user6.png" alt="">
+                                        <img class="media-object img-circle" src="../images/photos/me.png" alt="">
                                     </div>
                                     <div class="media-body">
                                         <h4 class="media-heading">Jamie W. Bradford</h4>
@@ -409,7 +409,7 @@
                             <li class="media">
                                 <a href="#">
                                     <div class="media-left">
-                                        <img class="media-object img-circle" src="../images/photos/user7.png" alt="">
+                                        <img class="media-object img-circle" src="../images/photos/me.png" alt="">
                                     </div>
                                     <div class="media-body">
                                         <h4 class="media-heading">Pamela J. Stump</h4>
@@ -420,7 +420,7 @@
                             <li class="media">
                                 <a href="#">
                                     <div class="media-left">
-                                        <img class="media-object img-circle" src="../images/photos/user8.png" alt="">
+                                        <img class="media-object img-circle" src="../images/photos/me.png" alt="">
                                     </div>
                                     <div class="media-body">
                                         <h4 class="media-heading">Refugio C. Burgess</h4>
@@ -442,7 +442,7 @@
                             <li class="media">
                                 <a href="#">
                                     <div class="media-left">
-                                        <img class="media-object img-circle" src="../images/photos/user10.png" alt="">
+                                        <img class="media-object img-circle" src="../images/photos/me.png" alt="">
                                     </div>
                                     <div class="media-body">
                                         <h4 class="media-heading">Roberta F. Horn</h4>
