--- a/Perchero/Views/Account/Register.cshtml
+++ b/Perchero/Views/Account/Register.cshtml
@@ -1,40 +1,74 @@
 ﻿@model Perchero.Models.RegisterViewModel
 @{
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
     ViewBag.Title = "Registrarse";
 }
+<div class="panel signin">
+    <div class="panel-heading">
+        <h1>@ViewBag.Title</h1>
+        <h4 class="panel-title">Bienvenido! Por favor @ViewBag.Title.</h4>
+    </div>
+    <div class="panel-body">
 
-<h2>@ViewBag.Title.</h2>
+        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Cree una cuenta nueva.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            <div class="form-group mb10">
+                @Html.ValidationMessageFor(m => m.Nombre, "", new { @class = "text-danger" })
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                    @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control", @placeholder = "Nombre" })
+                </div>
+            </div>
+    <div class="form-group mb10">
+        @Html.ValidationMessageFor(m => m.Apellido, "", new { @class = "text-danger" })
+        <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-chevron-right"></i></span>
+            @Html.TextBoxFor(m => m.Apellido, new { @class = "form-control", @placeholder = "Apellido" })
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+    <div class="form-group mb10">
+        @Html.ValidationMessageFor(m => m.Direccion, "", new { @class = "text-danger" })
+        <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-sort"></i></span>
+            @Html.TextBoxFor(m => m.Direccion, new { @class = "form-control", @placeholder = "Dirección" })
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+    <div class="form-group mb10">
+        @Html.ValidationMessageFor(m => m.Telefono, "", new { @class = "text-danger" })
+        <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+            @Html.TextBoxFor(m => m.Telefono, new { @class = "form-control", @placeholder = "Telefono" })
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Registrarse" />
-        </div>
+            <div class="form-group mb10">
+                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email" })
+                </div>
+            </div>
+            <div class="form-group mb10">
+                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Contraseña" })
+                </div>
+            </div>
+            <div class="form-group mb10">
+                @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirmar Contraseña" })
+                </div>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-success btn-quirk btn-block">INICIAR SESION</button>
+            </div>
+        }
     </div>
-}
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
