--- a/Perchero/Views/Prendas/Create.cshtml
+++ b/Perchero/Views/Prendas/Create.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Create";
 }
 
-@using (Html.BeginForm("Create", "Prendas", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Calcular", "Prendas", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <div class="contentpanel">
@@ -23,21 +23,9 @@
                 </h4>
             </div>
             <div class="panel-body form-horizontal">
-                <div class="form-group">
-                    @if (User.IsInRole("Administrador"))
-                    {
-                        @Html.LabelFor(model => model.UserId, "Administrador", htmlAttributes: new { @class = "control-label col-md-2" })
-                    }
-                    @if (User.IsInRole("Diseñador"))
-                    {
-                        @Html.LabelFor(model => model.UserId, "Diseñador", htmlAttributes: new { @class = "control-label col-md-2" })
-                    }
-                    @if (User.IsInRole("Cliente"))
-                    {
-                        @Html.LabelFor(model => model.UserId, "Diseñador", htmlAttributes: new { @class = "control-label col-md-2" })
-                    }
+                <div class="form-group hidden">
                     <div class="col-md-2">
-                        @Html.DropDownList("UserId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.HiddenFor(model => model.UserId, new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -45,9 +33,9 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.TipoId, "Categoria", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-2">
-                        @Html.Hidden("TipoId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.Hidden("TipoId", null, htmlAttributes: new { @class = "form-control", @placeholder = "Buscar"})
                         @Html.ValidationMessageFor(model => model.TipoId, "", new { @class = "text-danger" })
-                        <input class="form-control Tipo_Nombre text-box single-line valid" id="Tipo_Nombre" name="Nombre" type="text" value="" autocomplete="off">
+                        <input class="form-control Tipo_Nombre text-box single-line valid" id="Tipo_Nombre" name="Categoria" type="text" value="" autocomplete="off" placeholder="Buscar">
                     </div>
                 </div>
 
@@ -59,13 +47,6 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Imagen, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-2">
-                        @Html.EditorFor(model => model.Imagen, new { htmlAttributes = new { @class = "form-control", @type = "file" } })
-                        @Html.ValidationMessageFor(model => model.Imagen, "", new { @class = "text-danger" })
-                    </div>
-                </div>
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.Talle, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -75,23 +56,7 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Vitrina, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-2">
-                        <div class="checkbox">
-                            @Html.EditorFor(model => model.Vitrina)
-                            @Html.ValidationMessageFor(model => model.Vitrina, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.PrecioTotal, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-2">
-                        @Html.EditorFor(model => model.PrecioTotal, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.PrecioTotal, "", new { @class = "text-danger" })
-                    </div>
-                </div>
                 <div class="form-group">
                         <label class="control-label col-md-2">Accesorios</label>
                         @*<label id="tt"></label>*@
@@ -127,8 +92,7 @@
                                             @*<label class="control-label col-lg-12" for="sheepItForm_#index#_tela">Telas <span id="sheepItForm_label"></span></label>*@
                                             <div class="col-md-3">
                                                 @*@Html.EditorFor(model => model., new { htmlAttributes = new { @class = "form-control Tela_Nombre" } })*@
-                                                @Html.DropDownList("TelaId", null, "Selecionar tela", htmlAttributes: new { @id = "sheepItForm_#index#_tela", @class = "form-control sheepItForm_#index#_tela", Name = "DetallePrendas[#index#].TelaId" })
-
+                                                @Html.DropDownList("TelaId", null, "Selecionar Tela", htmlAttributes: new { @id = "sheepItForm_#index#_tela", @class = "form-control sheepItForm_#index#_tela", Name = "DetallePrendas[#index#].TelaId" })
                                             </div>
                                             <div class="col-md-2">
                                                 <input type="number" name="DetallePrendas[#index#].MetroTela" class="form-control" placeholder="Metros" id="sheepItForm_#index#_metros" />
@@ -195,7 +159,7 @@
             function cargar_tipo() {
                 var codigoTipoPrenda = {
                     url: "/Tipos/getTipoPrendas",
-                    getValue: "Nombre",
+                    getValue: "Categoria",
                     list: {
                         match: {
                             enabled: true
@@ -208,7 +172,7 @@
                             var TipoId = $(".Tipo_Nombre").getSelectedItemData().Id;
                             $("#TipoId").val(TipoId).trigger("change");
                             var Precio = $(".Tipo_Nombre").getSelectedItemData().Precio;
-                            precioTotal = Precio;
+                            $("#PrecioTotal").val(Precio);
                         },
                     },
                     theme: "plate-dark"
@@ -228,33 +192,37 @@
             var cantidadtela = [];
             var lisTelas = [];
             var cnt = 1;
-            //suma();
+            var cd = 0;
+            @*suma();
             function suma() {
-                //for (var i = 0; i < cnt; i++) {
-                //    canttela[i] = $("#sheepItForm_" + i + "_tela").val();
-                //    temp = canttela[i];
-                //    cantidadtela[i] = parseInt(temp);
-                //}
+                var pprenda = @Html.Raw(Json.Encode(Model.Precio));
+                for (var i = 0; i < cnt; i++) {
+                    canttela[i] = $("#sheepItForm_" + i + "_tela").val();
+                    console.log();
+                    temp = canttela[i];
+                    cantidadtela[i] = parseInt(temp);
+                    console.log(cantidadtela);
+                }
                 //cargar_tela();
-                //tela = $("#sheepItForm_"+ i +"_tela").val(precioTotal);
-                $("#PrecioTotal").val(precioTotal);
-                //console.log("hola");
-                //setTimeout(suma, 50);
-            }
+                setTimeout(suma, 50);
+            }*@
 
             $("#agt").click(function () {
                 cnt += 1;
+                cd += 1;
             });
             $("#sheepItForm_remove_current").click(function () {
                 cnt -= 1;
+                cd -= 1;
             });
 
-            cargar_tela();
+            //cargar_tela();
 
             function cargar_tela() {
+                //console.log(cd);
                 var codigoTela = {
                     url: "/Telas/getTelas",
-                    getValue: "Id",
+                    getValue: "Nombre",
                     list: {
                         match: {
                             enabled: true
@@ -264,26 +232,23 @@
                             enabled: true
                         },
                         onSelectItemEvent: function () {
-                            console.log("etro");
-                            for (var i = 0; i < cnt; i++) {
-                                var TelaId = $(".sheepItForm_" + i + "_tela").getSelectedItemData().Id;
-                                console.log(TelaId);
-                                $("#TelaId").val(TelaId).trigger("change");
-                                canttela[i] = $(".sheepItForm_" + i + "_tela").getSelectedItemData().Precio;
-                                temp = canttela[i];
-                                cantidadtela[i] = parseInt(temp);
-                            }
-
-                            console.log(cantidadtela);
+                            console.log(cd);
+                            //for (var i = 0; i < cnt; i++) {
+                            var TelaId = $(".sheepItForm_"+cd+"_tela").getSelectedItemData().Id;
+                            console.log(TelaId);
+                            $("#TelaId").val(TelaId).trigger("change");
+                            var precio = $(".sheepItForm_"+cd+"_tela").getSelectedItemData().Precio;
+                            console.log(precio);
+                            //}
                         },
                     },
                     theme: "plate-dark"
                     //theme: "square"
                     //theme: "round"
                 };
-                //$("input.Tipo_Nombre").easyAutocomplete(codigoTipoPrenda);
-                //$(".easy-autocomplete-container").addClass("text-danger");
-                setTimeout(cargar_tela, 50);
+                $("#sheepItForm_" + cd + "_tela").easyAutocomplete(codigoTela);
+                $(".easy-autocomplete-container").addClass("text-danger");
+                //setTimeout(cargar_tela, 50);
             };
 
 
