--- a/Perchero/Views/Prendas/Galeria.cshtml
+++ b/Perchero/Views/Prendas/Galeria.cshtml
@@ -3,56 +3,176 @@
 @{
     ViewBag.Title = "Galeria";
 }
+<div class="contentpanel">
 
-<div class="content-page">
-    <div class="content">
-        <div class="box-info animated fadeInDown">
-            <div class="widget text-white-1" style="background-color:#414141;">
-                <div class="widget-header">
-                    <h2>
-                        <strong class="text-white-1"><i class='fa fa-th-large'></i>  Galeria de Prendas</strong>
-                    </h2>
-                    <div class="additional-btn">
-                        <a href="#" class="hidden reload"><i class="icon-ccw-1"></i></a>
-                        <a href="#" class="widget-toggle"><i class="icon-down-open-2"></i></a>
-                        <a href="#" class="widget-close"><i class="icon-cancel-3"></i></a>
+    <ol class="breadcrumb breadcrumb-quirk">
+        <li>
+            <a href="index.html"><i class="fa fa-home mr5"></i> Home</a>
+        </li>
+        <li><a href="buttons.html">Pages</a></li>
+        <li class="active">Asset Manager</li>
+    </ol>
+
+
+    <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="well well-asset-options clearfix">
+                <div class="btn-toolbar btn-toolbar-media-manager pull-left" role="toolbar">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default"><i class="fa fa-share"></i> Share</button>
+                        <button type="button" class="btn btn-default"><i class="fa fa-download"></i> Download</button>
                     </div>
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default disabled"><i class="fa fa-pencil"></i> Edit</button>
+                        <button type="button" class="btn btn-default disabled"><i class="fa fa-trash"></i> Delete</button>
+                    </div>
+                </div><!-- btn-toolbar -->
+
+                <div class="btn-group pull-right" data-toggle="buttons">
+                    <label class="btn btn-default-active active">
+                        <input type="checkbox" checked> All
+                    </label>
+                    <label class="btn btn-default-active">
+                        <input type="checkbox"> Images
+                    </label>
+                    <label class="btn btn-default-active">
+                        <input type="checkbox"> Videos
+                    </label>
+                    <label class="btn btn-default-active">
+                        <input type="checkbox"> Documents
+                    </label>
+                    <label class="btn btn-default-active">
+                        <input type="checkbox"> Music
+                    </label>
                 </div>
-                <div class="widget-content padding">
+            </div>
 
-                    <div class="gallery-wrap">
-                        @foreach (var item in Model)
-                        {
-                            <div class="column">
-                                <div class="inner">
-                                    @if (User.IsInRole("Cliente"))
-                                    {
-
-                                    }
-                                    <p class="row">
-                                        <a href="@Url.Action("Pedido", "Pedidoes", new {PrendaId = item.Id})" class="btn btn-darkblue-2 btn-block">Seleccionar</a>
-                                    </p>
-                                    <a class="zooming" href="@Url.Content("~/Content/imgprenda/imgori/" + item.Imagen + "/" + item.Imagen + ".png")" title="@item.Nombre">
-
-                                        <div class="img-wrap">
-                                            <img src="@Url.Content("~/Content/imgprenda/imgprev/" + item.Imagen + "/" + item.Imagen + ".png")" alt="@item.Nombre" title="@item.Nombre" class="mfp-fade">
-                                        </div>
-                                        <div class="caption-hover">
-                                            @Html.DisplayFor(modelItem => item.Nombre)
-                                            <br />
-                                            @Html.DisplayFor(modelItem => item.Usuario.Nombre)
-                                            <br />
-                                            @Html.DisplayFor(modelItem => item.PrecioTotal) Gs.
-                                            <br />
-                                        </div>
-                                    </a>
-                                </div>
+            <div class="row filemanager">
+                @foreach (var item in Model)
+                {
+                    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 audio">
+                        <div class="thmb">
+                            <label class="ckbox">
+                                <input type="checkbox"><span></span>
+                            </label>
+                            <div class="btn-group fm-group">
+                                <button type="button" class="btn btn-default dropdown-toggle fm-toggle" data-toggle="dropdown">
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu pull-right fm-menu" role="menu">
+                                    <li>
+                                        <a href="@Url.Action("Pedido", "Pedidoes", new {PrendaId = item.Id})"><i class="fa fa-share"></i> Seleccionar</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fa fa-pencil"></i> Edit</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fa fa-download"></i> Download</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fa fa-trash-o"></i> Delete</a>
+                                    </li>
+                                </ul>
+                            </div><!-- btn-group -->
+                            <div class="thmb-prev">
+                                <img src="@Url.Content("~/Content/imgprenda/imgori/" + item.Imagen + "/" + item.Imagen + ".png")" class="img-responsive" alt="" />
                             </div>
-                        }
-                    </div>
-
-                </div>
+                            <h5 class="fm-title"><a href="">@Html.DisplayFor(modelItem => item.Nombre)</a></h5>
+                            <small class="text-muted">Added: @Html.DisplayFor(modelItem => item.Usuario.Nombre)</small>
+                            <br />
+                            <small class="text-muted">Added: @Html.DisplayFor(modelItem => item.PrecioTotal)</small>
+                            <br />
+                            <small class="text-muted">Added: @Html.DisplayFor(modelItem => item.Tipo.Categoria)</small>
+                            <br />
+                        </div><!-- thmb -->
+                    </div><!-- col-xs-6 -->
+                }
             </div>
         </div>
     </div>
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        jQuery(document).ready(function () {
+
+            'use strict';
+
+            jQuery('.thmb').hover(function () {
+                var t = jQuery(this);
+                t.find('.ckbox').show();
+                t.find('.fm-group').show();
+            }, function () {
+                var t = jQuery(this);
+                if (!t.closest('.thmb').hasClass('checked')) {
+                    t.find('.ckbox').hide();
+                    t.find('.fm-group').hide();
+                }
+            });
+
+            jQuery('.ckbox').each(function () {
+                var t = jQuery(this);
+                var parent = t.parent();
+                if (t.find('input').is(':checked')) {
+                    t.show();
+                    parent.find('.fm-group').show();
+                    parent.addClass('checked');
+                }
+            });
+
+
+            jQuery('.ckbox').click(function () {
+                var t = jQuery(this);
+                if (!t.find('input').is(':checked')) {
+                    t.closest('.thmb').removeClass('checked');
+                    enable_itemopt(false);
+                } else {
+                    t.closest('.thmb').addClass('checked');
+                    enable_itemopt(true);
+                }
+            });
+
+            jQuery('#selectall').click(function () {
+                if (jQuery(this).is(':checked')) {
+                    jQuery('.thmb').each(function () {
+                        jQuery(this).find('input').attr('checked', true);
+                        jQuery(this).addClass('checked');
+                        jQuery(this).find('.ckbox, .fm-group').show();
+                    });
+                    enable_itemopt(true);
+                } else {
+                    jQuery('.thmb').each(function () {
+                        jQuery(this).find('input').attr('checked', false);
+                        jQuery(this).removeClass('checked');
+                        jQuery(this).find('.ckbox, .fm-group').hide();
+                    });
+                    enable_itemopt(false);
+                }
+            });
+
+            function enable_itemopt(enable) {
+                if (enable) {
+                    jQuery('.itemopt').removeClass('disabled');
+                } else {
+
+                    // check all thumbs if no remaining checks
+                    // before we can disabled the options
+                    var ch = false;
+                    jQuery('.thmb').each(function () {
+                        if (jQuery(this).hasClass('checked'))
+                            ch = true;
+                    });
+
+                    if (!ch)
+                        jQuery('.itemopt').addClass('disabled');
+                }
+            }
+
+            jQuery("a[data-rel^='prettyPhoto']").prettyPhoto();
+
+        });
+
+    </script>
+}
+
