--- a/Perchero/Views/Manage/Index.cshtml
+++ b/Perchero/Views/Manage/Index.cshtml
@@ -1,84 +1,125 @@
 ﻿@model Perchero.Models.IndexViewModel
 @{
-    ViewBag.Title = "Gestionar";
+    ViewBag.Title = "Mi Perfil";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="contentpanel">
 
-<p class="text-success">@ViewBag.StatusMessage</p>
-<div>
-    <h4>Cambiar la configuración de la cuenta</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>Contraseña:</dt>
-        <dd>
-            [
-            @if (Model.HasPassword)
-            {
-                @Html.ActionLink("Cambiar la contraseña", "ChangePassword")
-            }
-            else
-            {
-                @Html.ActionLink("Crear", "SetPassword")
-            }
-            ]
-        </dd>
-        <dt>Inicios de sesión externos:</dt>
-        <dd>
-            @Model.Logins.Count [
-            @Html.ActionLink("Administrar", "ManageLogins") ]
-        </dd>
-        @*
-            Los números de teléfono se pueden usar como un segundo factor de comprobación en un sistema de autenticación en dos fases.
-             
-             Consulte <a href="http://go.microsoft.com/fwlink/?LinkId=403804">este artículo</a>
-                para obtener más información acerca de la configuración de esta aplicación ASP.NET para admitir la autenticación en dos fases con SMS.
-             
-             Quite la marca de comentario del siguiente bloque una vez haya configurado la autenticación en dos fases
-        *@
-        @*  
-            <dt>Número de teléfono:</dt>
-            <dd>
-                @(Model.PhoneNumber ?? "Ninguno") [
-                @if (Model.PhoneNumber != null)
-                {
-                    @Html.ActionLink("Cambiar", "AddPhoneNumber")
-                    @: &nbsp;|&nbsp;
-                    @Html.ActionLink("Quitar", "RemovePhoneNumber")
-                }
-                else
-                {
-                    @Html.ActionLink("Agregar", "AddPhoneNumber")
-                }
-                ]
-            </dd>
-        *@
-        <dt>Autenticación de dos factores:</dt>
-        <dd>
-            <p>
-                No hay ningún proveedor de autenticación en dos fases configurado. Consulte <a href="http://go.microsoft.com/fwlink/?LinkId=403804">este artículo</a>
-                para obtener más información acerca de la configuración de esta aplicación ASP.NET para admitir la autenticación en dos fases.
-            </p>
+    <ol class="breadcrumb breadcrumb-quirk">
+        <li>
+            <a href="@Url.Action("Index","Home")"><i class="fa fa-home mr5"></i> Inicio</a>
+        </li>
+        <li class="active"> Mi Perfil</li>
+    </ol>
+    <div class="panel panel-primary panel-profile list-view">
+        <div class="panel-heading">
+            <div class="media">
+                <div class="media-body">
+                    <h4 class="media-heading" style="color: white;">
+                        <i class="glyphicon glyphicon-user"></i> @ViewBag.Title
+                        <div class="pull-right">
+                            @Html.ActionLink("Editar", "Edit", new { id = Model.Id }, new { @class = "btn btn-warning btn-xs" })
+                            @Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-default btn-xs" })
+                        </div>
+                    </h4>
+                </div>
+            </div><!-- media -->
+        </div><!-- panel-heading -->
+
+        <p class="text-success">@ViewBag.StatusMessage</p>
+        <div class="container">
+            <h4>Cambiar la configuración de la cuenta</h4>
+            <hr />
+            <div class="full-content-center">
+                <div class="login-wrap animated flipInX">
+                    <img src="~/images/default-user.png" class="img-circle not-logged-avatar">
+                </div>
+                <div class="login-block">
+                    <dl class="dl-horizontal">
+                        <dt>Nombre:</dt>
+                        <dd>@Model.Nombre</dd>
+                        <dt>Apellido:</dt>
+                        <dd>@Model.Apellido</dd>
+                        <dt>Direccion:</dt>
+                        <dd>@Model.Direccion</dd>
+                        <dt>Telefono:</dt>
+                        <dd>@Model.Telefono</dd>
+                        <dt>Contraseña:</dt>
+                        <dd>
+                            [
+                            @if (Model.HasPassword)
+                            {
+                                @Html.ActionLink("Cambiar la contraseña", "ChangePassword")
+                            }
+                            else
+                            {
+                                @Html.ActionLink("Crear", "SetPassword")
+                            }
+                            ]
+                        </dd>
+                    </dl>
+                </div>
+            </div>
+
+            @*<dt>Inicios de sesión externos:</dt>
+                <dd>
+                    @Model.Logins.Count [
+                    @Html.ActionLink("Administrar", "ManageLogins") ]
+                </dd>*@
+            @*
+                Los números de teléfono se pueden usar como un segundo factor de comprobación en un sistema de autenticación en dos fases.
+
+                 Consulte <a href="http://go.microsoft.com/fwlink/?LinkId=403804">este artículo</a>
+                    para obtener más información acerca de la configuración de esta aplicación ASP.NET para admitir la autenticación en dos fases con SMS.
+
+                 Quite la marca de comentario del siguiente bloque una vez haya configurado la autenticación en dos fases
+            *@
+            @*
+                <dt>Número de teléfono:</dt>
+                <dd>
+                    @(Model.PhoneNumber ?? "Ninguno") [
+                    @if (Model.PhoneNumber != null)
+                    {
+                        @Html.ActionLink("Cambiar", "AddPhoneNumber")
+                        @: &nbsp;|&nbsp;
+                        @Html.ActionLink("Quitar", "RemovePhoneNumber")
+                    }
+                    else
+                    {
+                        @Html.ActionLink("Agregar", "AddPhoneNumber")
+                    }
+                    ]
+                </dd>
+            *@
+            @*<dt>Autenticación de dos factores:</dt>
+                <dd>
+                    <p>
+                        No hay ningún proveedor de autenticación en dos fases configurado. Consulte <a href="http://go.microsoft.com/fwlink/?LinkId=403804">este artículo</a>
+                        para obtener más información acerca de la configuración de esta aplicación ASP.NET para admitir la autenticación en dos fases.
+                    </p>*@
             @*@if (Model.TwoFactor)
-                {
-                    using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
-                        @Html.AntiForgeryToken()
-                        <text>Habilitado
-                        <input type="submit" value="Deshabilitar" class="btn btn-link" />
-                        </text>
+                        using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <text>Habilitado
+                            <input type="submit" value="Deshabilitar" class="btn btn-link" />
+                            </text>
+                        }
                     }
-                }
-                else
-                {
-                    using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                    else
                     {
-                        @Html.AntiForgeryToken()
-                        <text>Deshabilitado
-                        <input type="submit" value="Habilitar" class="btn btn-link" />
-                        </text>
+                        using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <text>Deshabilitado
+                            <input type="submit" value="Habilitar" class="btn btn-link" />
+                            </text>
+                        }
                     }
-                }*@
-        </dd>
-    </dl>
+                </dd>*@
+
+        </div>
+
+    </div><!-- panel -->
 </div>
