--- a/Perchero/Views/Prendas/Create.cshtml
+++ b/Perchero/Views/Prendas/Create.cshtml
@@ -20,8 +20,13 @@
             <div class="panel-heading">
                 <h4 class="panel-title">
                     Nueva prenda
+
                     <div class="pull-right">
                         @Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-default btn-xs" })
+                    </div>
+
+                    <div class="pull-right">
+                        <input type="submit" value="CREAR" class="btn btn-default btn-xs" />
                     </div>
                 </h4>
                 <p></p>
@@ -68,9 +73,7 @@
                     <div class="col-lg-12">
                         <br>
                         <div class="form-group pull-right">
-                            <div class="col-md-4">
-                                <input type="submit" value="Create" class="btn btn-default" />
-                            </div>
+
                         </div>
                     </div>
                 </div>
