--- a/Perchero/Views/Shared/_LoginPartial.cshtml
+++ b/Perchero/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu pull-right">
-                <li><a href=""><i class="glyphicon glyphicon-user"></i> Mi Perfil</a></li>
+                <li><a href="@Url.Action("Index", "Manage")"><i class="glyphicon glyphicon-user"></i> Mi Perfil</a></li>
                 <li><a href="javascript:document.getElementById('logoutForm').submit()"><i class="glyphicon glyphicon-log-out"></i> Cerrar sesión</a></li>
             </ul>
         </div>
