--- a/Perchero/Views/Manage/Index.cshtml
+++ b/Perchero/Views/Manage/Index.cshtml
@@ -28,98 +28,134 @@
 
         <p class="text-success">@ViewBag.StatusMessage</p>
         <div class="container">
-            <h4>Cambiar la configuración de la cuenta</h4>
-            <hr />
-            <div class="full-content-center">
-                <div class="login-wrap animated flipInX">
-                    <img src="~/images/default-user.png" class="img-circle not-logged-avatar">
+            <div class="login-wrap animated flipInX col-md-3">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object img-circle" src="~/images/default-user.png" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">@Model.Nombre @Model.Apellido</h4>
+                        <p class="media-usermeta"><i class="fa fa-group"></i> Cliente</p>
+                    </div>
+                </div><!-- media -->
                 </div>
-                <div class="login-block">
-                    <dl class="dl-horizontal">
-                        <dt>Nombre:</dt>
-                        <dd>@Model.Nombre</dd>
-                        <dt>Apellido:</dt>
-                        <dd>@Model.Apellido</dd>
-                        <dt>Direccion:</dt>
-                        <dd>@Model.Direccion</dd>
-                        <dt>Telefono:</dt>
-                        <dd>@Model.Telefono</dd>
-                        <dt>Contraseña:</dt>
-                        <dd>
-                            [
-                            @if (Model.HasPassword)
-                            {
-                                @Html.ActionLink("Cambiar la contraseña", "ChangePassword")
-                            }
-                            else
-                            {
-                                @Html.ActionLink("Crear", "SetPassword")
-                            }
-                            ]
-                        </dd>
-                    </dl>
+                <div class="panel-body people-info">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="info-group">
+                                <label>Direccion</label>
+                                @Model.Direccion
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="info-group">
+                                <label>Correo</label>
+                                @Model.Email
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="info-group">
+                                <label>Contraseña</label>
+                                <h4>
+                                    @if (Model.HasPassword)
+                                    {
+                                        @Html.ActionLink("Cambiar la contraseña", "ChangePassword")
+                                    }
+                                    else
+                                    {
+                                        @Html.ActionLink("Crear", "SetPassword")
+                                    }
+                            </h4>
+                        </div>
+                    </div>
+                    </div><!-- row -->
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="info-group">
+                                <label>Telefono</label>
+                                @Model.Telefono
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="info-group">
+                                <label>Following</label>
+                                <h4>232</h4>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="info-group">
+                                <label>Social</label>
+                                <div class="social-account-list">
+                                    <i class="fa fa-facebook-official"></i>
+                                    <i class="fa fa-twitter"></i>
+                                    <i class="fa fa-skype"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div><!-- row -->
                 </div>
+
+                @*<dt>Inicios de sesión externos:</dt>
+            <dd>
+                @Model.Logins.Count [
+                @Html.ActionLink("Administrar", "ManageLogins") ]
+            </dd>*@
+                @*
+            Los números de teléfono se pueden usar como un segundo factor de comprobación en un sistema de autenticación en dos fases.
+
+             Consulte <a href="http://go.microsoft.com/fwlink/?LinkId=403804">este artículo</a>
+                para obtener más información acerca de la configuración de esta aplicación ASP.NET para admitir la autenticación en dos fases con SMS.
+
+             Quite la marca de comentario del siguiente bloque una vez haya configurado la autenticación en dos fases
+                *@
+                @*
+            <dt>Número de teléfono:</dt>
+            <dd>
+                @(Model.PhoneNumber ?? "Ninguno") [
+                @if (Model.PhoneNumber != null)
+                {
+                    @Html.ActionLink("Cambiar", "AddPhoneNumber")
+                    @: &nbsp;|&nbsp;
+                    @Html.ActionLink("Quitar", "RemovePhoneNumber")
+                }
+                else
+                {
+                    @Html.ActionLink("Agregar", "AddPhoneNumber")
+                }
+                ]
+            </dd>
+                *@
+                @*<dt>Autenticación de dos factores:</dt>
+            <dd>
+                <p>
+                    No hay ningún proveedor de autenticación en dos fases configurado. Consulte <a href="http://go.microsoft.com/fwlink/?LinkId=403804">este artículo</a>
+                    para obtener más información acerca de la configuración de esta aplicación ASP.NET para admitir la autenticación en dos fases.
+                </p>*@
+                @*@if (Model.TwoFactor)
+                {
+                    using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <text>Habilitado
+                        <input type="submit" value="Deshabilitar" class="btn btn-link" />
+                        </text>
+                    }
+                }
+                else
+                {
+                    using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <text>Deshabilitado
+                        <input type="submit" value="Habilitar" class="btn btn-link" />
+                        </text>
+                    }
+                }
+            </dd>*@
+
             </div>
-
-            @*<dt>Inicios de sesión externos:</dt>
-                <dd>
-                    @Model.Logins.Count [
-                    @Html.ActionLink("Administrar", "ManageLogins") ]
-                </dd>*@
-            @*
-                Los números de teléfono se pueden usar como un segundo factor de comprobación en un sistema de autenticación en dos fases.
-
-                 Consulte <a href="http://go.microsoft.com/fwlink/?LinkId=403804">este artículo</a>
-                    para obtener más información acerca de la configuración de esta aplicación ASP.NET para admitir la autenticación en dos fases con SMS.
-
-                 Quite la marca de comentario del siguiente bloque una vez haya configurado la autenticación en dos fases
-            *@
-            @*
-                <dt>Número de teléfono:</dt>
-                <dd>
-                    @(Model.PhoneNumber ?? "Ninguno") [
-                    @if (Model.PhoneNumber != null)
-                    {
-                        @Html.ActionLink("Cambiar", "AddPhoneNumber")
-                        @: &nbsp;|&nbsp;
-                        @Html.ActionLink("Quitar", "RemovePhoneNumber")
-                    }
-                    else
-                    {
-                        @Html.ActionLink("Agregar", "AddPhoneNumber")
-                    }
-                    ]
-                </dd>
-            *@
-            @*<dt>Autenticación de dos factores:</dt>
-                <dd>
-                    <p>
-                        No hay ningún proveedor de autenticación en dos fases configurado. Consulte <a href="http://go.microsoft.com/fwlink/?LinkId=403804">este artículo</a>
-                        para obtener más información acerca de la configuración de esta aplicación ASP.NET para admitir la autenticación en dos fases.
-                    </p>*@
-            @*@if (Model.TwoFactor)
-                    {
-                        using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                        {
-                            @Html.AntiForgeryToken()
-                            <text>Habilitado
-                            <input type="submit" value="Deshabilitar" class="btn btn-link" />
-                            </text>
-                        }
-                    }
-                    else
-                    {
-                        using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                        {
-                            @Html.AntiForgeryToken()
-                            <text>Deshabilitado
-                            <input type="submit" value="Habilitar" class="btn btn-link" />
-                            </text>
-                        }
-                    }
-                </dd>*@
-
-        </div>
 
     </div><!-- panel -->
 </div>
